第一个版本

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snack_platform_view",
+  "name": "snack_platform_manager",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "core-js": "^3.8.3",
+    "element-plus": "^2.9.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
